--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-streamlit
-mediapipe==0.10.14
-opencv-python
-numpy
 pandas
 scikit-learn
 joblib
 tqdm
 matplotlib
 seaborn
+streamlit==1.51.0
+opencv-python==4.8.1.78
+mediapipe==0.10.14
+numpy==1.26.2
+
